compiler/tests/ar/errors/pure_print_ar.salam
// لغة: العربية
// EXPECT: E012
نقي دالة صارخ(x صحيح٣٢) صحيح٣٢:
    اطبع(x)
    أرجع x
نهاية

دالة الرئيسية:
    اطبع(صارخ(2))
نهاية
